kubernetes/apps/immich/immich/app/httproute.yaml
---
# TODO do better after https://github.com/immich-app/immich-charts/issues/165
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: https-subdomains
  hostnames:
    - immich.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: strict-transport-security
                value: max-age=31536000
